 - Fixed a bug where Purify couldn't be used outside of battle.
 - Fixed a bug where retrying a battle would cause items from previous attempts to show up on the dropped item window at the end of battle. This was only a visual bug.
 - Fixed a bug where the Suffering Soul had only 25% physical element damage reduction rather than the intended 50%.
 - Fixed a bug where Brawl Brew and Warding Swig would not bypass death removal.
 - Fixed a bug where On Fire!'s damage at the end of every turn was half of the intended value.
 - Fixed a bug where states with no overlay would override states with an overlay if they had a higher priority value.
 - Fixed a bug where life steal attributes with decimals would not be parsed correctly.
 - Fixed a bug where playtime wouldn't increase correctly on non-60hz displays.
 - Fixed a bug where the crafted weapons/armor counters could be wrong.
 - Fixed a bug where elemental weapons did not count as physical-elemental hits.
 - Fixed a bug where INT slightly affected state application rates.
 - Fixed a bug where Flashbang could leave an enemy at 0 HP but it wouldn't die until another action was made.
 - Fixed a bug where exiting the keyboard config menu would fade the options menu back in instead directly cutting to it.
 - Fixed a bug where magic skills used the wrong motion when casting.
 - Fixed a bug where battlers affected by Frozen I would still have their sprite move if an action sequence commanded them to.
 - Fixed a bug where vA.14.7 removed Solus Town's snow but neglected to remove the snow around it in the overworld.
 - Fixed #9 and #10.
 - Just like usual, a huge amount of minor bugs, textual errors, and visual issues were corrected in this release.

Alpha 10.2 and the updates preceding it served to build the foundation of The Trail, allowing me to start learning how to make a game that was mechanically sound and coherent.