@@ -12787,13 +12787,6 @@
           "walkAnime": false,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 242,
               "indent": 0,
               "parameters": [
@@ -14714,13 +14707,6 @@
                 25,
                 25,
                 0
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
