@@ -6151,13 +6151,6 @@
           "walkAnime": true,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 101,
               "indent": 0,
               "parameters": [
@@ -10251,13 +10244,6 @@
               "code": 222,
               "indent": 0,
               "parameters": []
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
             },
             {
               "code": 356,
