@@ -3808,13 +3808,6 @@
           "walkAnime": true,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 101,
               "indent": 0,
               "parameters": [
@@ -5860,13 +5853,6 @@
               "code": 222,
               "indent": 0,
               "parameters": []
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
             },
             {
               "code": 244,
