@@ -16144,13 +16144,6 @@
           "walkAnime": true,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 101,
               "indent": 0,
               "parameters": [
@@ -19773,13 +19766,6 @@
               "indent": 0,
               "parameters": [
                 "pretty late in the afternoon."
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
