@@ -6656,13 +6656,6 @@
           "walkAnime": false,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 250,
               "indent": 0,
               "parameters": [
