@@ -10526,13 +10526,6 @@
           "walkAnime": true,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 284,
               "indent": 0,
               "parameters": [
