@@ -11653,13 +11653,6 @@
           "walkAnime": true,
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 111,
               "indent": 0,
               "parameters": [
@@ -12966,13 +12959,6 @@
               ]
             },
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
-            },
-            {
               "code": 0,
               "indent": 0,
               "parameters": []
@@ -13603,13 +13589,6 @@
           "trigger": 1,
           "walkAnime": true,
           "list": [
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
             {
               "code": 111,
               "indent": 0,
@@ -15735,13 +15714,6 @@
               "indent": 0,
               "parameters": [
                 "that we can get."
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
