@@ -5507,13 +5507,6 @@
               ]
             },
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 222,
               "indent": 0,
               "parameters": []
@@ -7856,13 +7849,6 @@
               "indent": 0,
               "parameters": [
                 33
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
