@@ -3426,13 +3426,6 @@
           },
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 205,
               "indent": 0,
               "parameters": [
@@ -5705,13 +5698,6 @@
               "code": 222,
               "indent": 0,
               "parameters": []
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
             },
             {
               "code": 0,
