@@ -7250,13 +7250,6 @@
               ]
             },
             {
-              "code": 356,
-              "indent": 1,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 242,
               "indent": 1,
               "parameters": [
@@ -9157,13 +9150,6 @@
               "code": 412,
               "indent": 1,
               "parameters": []
-            },
-            {
-              "code": 356,
-              "indent": 1,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
             },
             {
               "code": 0,
