@@ -16132,13 +16132,6 @@
           },
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 221,
               "indent": 0,
               "parameters": []
@@ -19155,13 +19148,6 @@
                   ],
                   "indent": null
                 }
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
