@@ -5305,13 +5305,6 @@
               "parameters": []
             },
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 221,
               "indent": 0,
               "parameters": []
