@@ -1392,13 +1392,6 @@
           },
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 230,
               "indent": 0,
               "parameters": [
@@ -2533,13 +2526,6 @@
               "indent": 0,
               "parameters": [
                 34
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
