@@ -19082,13 +19082,6 @@
               "parameters": []
             },
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 101,
               "indent": 0,
               "parameters": [
@@ -32736,13 +32729,6 @@
               "code": 222,
               "indent": 0,
               "parameters": []
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
             },
             {
               "code": 0,
