@@ -24069,13 +24069,6 @@
           },
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 242,
               "indent": 0,
               "parameters": [
@@ -26238,13 +26231,6 @@
                   "pitch": 100,
                   "pan": 0
                 }
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
