@@ -11511,13 +11511,6 @@
           },
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 241,
               "indent": 0,
               "parameters": [
@@ -12413,13 +12406,6 @@
               "indent": 0,
               "parameters": [
                 "CAM PLAYER 1600"
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
