@@ -5040,13 +5040,6 @@
           },
           "list": [
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 101,
               "indent": 0,
               "parameters": [
@@ -8418,13 +8411,6 @@
               "indent": 0,
               "parameters": [
                 "Quest 29 Change Description Entry To 4"
-              ]
-            },
-            {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
               ]
             },
             {
