@@ -13669,13 +13669,6 @@
               ]
             },
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "ShowActiveQuestWindow"
-              ]
-            },
-            {
               "code": 0,
               "indent": 0,
               "parameters": []
