@@ -13550,13 +13550,6 @@
               "parameters": []
             },
             {
-              "code": 356,
-              "indent": 0,
-              "parameters": [
-                "HideActiveQuestWindow"
-              ]
-            },
-            {
               "code": 246,
               "indent": 0,
               "parameters": [
